--- a/hello-service/package.json
+++ b/hello-service/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "ts-hello-service",
+    "name": "hello-service",
     "version": "1.0.0",
-    "description": "ts-hello-service",
+    "description": "hello-service",
     "author": "Derk Muenchhausen <derk@muenchhausen.de>",
     "main": "server.js",
     "scripts": {
