--- a/kubernetes-ingress-hello-world.yaml
+++ b/kubernetes-ingress-hello-world.yaml
@@ -3,8 +3,15 @@ kind: Ingress
 metadata:
   name: kubernetes-ingress-hello-world
   annotations:
+    ingress.kubernetes.io/ssl-redirect: "true"
     ingress.kubernetes.io/rewrite-target: /
+    enable-vts-status: "true"
 spec:
+  # SSLDHParam
+  tls:
+  - secretName: tls-certificate
+    hosts:
+    - greetings.toall
   backend:
     serviceName: default-http-backend
     servicePort: 80
